[gd_scene load_steps=4 format=3 uid="uid://cgp3hxbc41j6k"]

[ext_resource type="Texture2D" uid="uid://dhocq1e5xyi4e" path="res://images/army/unit logo.png" id="1_ml5y7"]
[ext_resource type="Script" uid="uid://dpm3tcdq8c28s" path="res://Map_data/armies/enemy_ai_army.gd" id="2_ml5y7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3co52"]
size = Vector2(70, 95)

[node name="ENEMY" type="Node2D"]
scale = Vector2(0.346111, 0.34602)

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.983894, 0, 0.204116, 1)
scale = Vector2(0.77, 0.77)
texture = ExtResource("1_ml5y7")
script = ExtResource("2_ml5y7")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_3co52")

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D"]
offset_left = 86.0
offset_top = -218.0
offset_right = 2528.0
offset_bottom = 85.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/normal_font_size = 221

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite2D"]
offset_left = 86.3022
offset_top = -187.663
offset_right = 2528.3
offset_bottom = 115.337
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/normal_font_size = 221

[node name="RichTextLabel3" type="RichTextLabel" parent="Sprite2D"]
offset_left = -97.559
offset_top = -157.637
offset_right = 1816.44
offset_bottom = 145.363
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/normal_font_size = 221

[connection signal="child_entered_tree" from="." to="Sprite2D" method="_on_node_2d_child_entered_tree"]
[connection signal="input_event" from="Sprite2D/Area2D" to="Sprite2D" method="_on_area_2d_input_event"]
